[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
exclude = '''
/(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.pytype
    | _build
    | buck-out
    | build
    | dist
    | examples
)/
| docs/conf.py
'''
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.isort]
dont_skip = "*/**/__init__.py"
known_third_party = [
]
include_trailing_comma = true
line_length = 100
lines_after_imports = 2
multi_line_output = 3
skip_glob = [
    '*/.eggs/*',
    '*/.pytype/*',
    '*/.tox/*',
]

[tool.coverage.run]
source = ['excelrd']
branch = true

[tool.coverage.report]
show_missing = true
precision = 1
exclude_lines = [
    'except ImportError',
    'raise NotImplementedError',
    'pass',
    'ABCmeta',
    'abstractmethod',
    'abstractproperty',
    'abstractclassmethod',
    'warnings.warn',
]
